--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
+# JWT settings
+jwt.secret=${JWT_SECRET_KEY}
+jwt.expirationMs=3600000
