--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,4 +11,5 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 
 # JWT settings
 jwt.secret=${JWT_SECRET_KEY}
-jwt.expirationMs=3600000
+
+swagger.url=http://localhost:8080/swagger-ui/index.html#/
